# modern-software-dev-assignments

./: .gitignore  README.md  pyproject.toml
.claude/commands/: tests.md
week1/: README.md  assignment.md  chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week1/data/: api_docs.txt
week2/: README.md  assignment.md  writeup.md
week2/app/: db.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/: README.md  assignment.md
week3/server/: .env.example  .gitignore  main.py  pyproject.toml  test_server.py
week4/: CLAUDE.md  Makefile  README.md  assignment.md  writeup.md
week4/backend/: __init__.py
week4/backend/app/: __init__.py  main.py  models.py  (+1 more)
week4/data/: seed.sql
week4/docs/: TASKS.md
week5/: README.md  assignment.md  pre-commit-config.yaml  writeup.md
week5/backend/: __init__.py
week5/data/: seed.sql
week5/docs/: TASKS.md
week5/frontend/: app.js  index.html  styles.css
week6/: Makefile  assignment.md  requirements.txt  writeup.md
week6/frontend/: app.js  index.html
week7/: README.md  assignment.md  pre-commit-config.yaml  writeup.md
week7/data/: seed.sql
week7/docs/: TASKS.md
week7/frontend/: app.js  index.html  styles.css
week8/: assignment.md  writeup.md
week8/immigration-crm-bolt/: README.md  index.html
week8/immigration-crm-django/: .gitignore  README.md  requirements.txt
week8/immigration-crm-mern/: .env.example  .gitignore  README.md
(+71 files in other folders)
